<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
android:background="@drawable/home"
    tools:context=".Home">


    <TextView
        android:id="@+id/titulo"
        android:layout_width="127dp"
        android:layout_height="50dp"
        android:layout_marginBottom="484dp"
        android:fontFamily="cursive"
        android:text="Guatape"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/botonhoteles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"

        android:text="@string/hoteles"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.733"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titulo"
        android:background="@drawable/boton_personalizado"
        app:layout_constraintVertical_bias="0.155" />


    <Button
        android:id="@+id/botonrestaurantes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/boton_personalizado"
        android:text="@string/restaurantes"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/botonhoteles"
        app:layout_constraintVertical_bias="0.087"

        />

    <Button
        android:id="@+id/botonsitiosturisticos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/boton_personalizado"
        android:text="@string/sitiosTuristicos"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/botonrestaurantes"

        app:layout_constraintVertical_bias="0.145"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/bienvenido"
        android:layout_width="188dp"
        android:layout_height="57dp"
        android:layout_marginBottom="120dp"
        android:fontFamily="cursive"
        android:text="@string/Bienevenido"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/cliente"
        android:layout_width="136dp"
        android:layout_height="51dp"
        android:layout_marginBottom="52dp"
        android:fontFamily="cursive"
        android:text="Cliente"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>